--- a/udX/html/index.html
+++ b/udX/html/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>CognomNom GitFlow</title>
 </head>
 <body>
+<h1>CognomNom GitFlow</h1>
 </body>
 </html>
